// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberedStep applies isActive prop correctly 1`] = `
<MockStyledComponent
  $isActive={true}
  $isCompleted={false}
>
  <MockStyledComponent
    $isActive={true}
    $isCompleted={false}
  >
    <span />
  </MockStyledComponent>
  <MockStyledComponent
    $isActive={true}
    $isCompleted={false}
  />
  <MockStyledComponent
    $isActive={true}
    $isCompleted={false}
  >
    <MockStyledComponent
      $isActive={true}
      $isCompleted={false}
    />
    <MockStyledComponent />
  </MockStyledComponent>
</MockStyledComponent>
`;

exports[`NumberedStep applies isCompleted prop correctly 1`] = `
<MockStyledComponent
  $isActive={false}
  $isCompleted={true}
>
  <MockStyledComponent
    $isActive={false}
    $isCompleted={true}
  >
    <Check
      size={12}
    />
  </MockStyledComponent>
  <MockStyledComponent
    $isActive={false}
    $isCompleted={true}
  />
  <MockStyledComponent
    $isActive={false}
    $isCompleted={true}
  >
    <MockStyledComponent
      $isActive={false}
      $isCompleted={true}
    />
    <MockStyledComponent />
  </MockStyledComponent>
</MockStyledComponent>
`;

exports[`NumberedStep applies isLast prop correctly 1`] = `
<MockStyledComponent
  $isActive={false}
  $isCompleted={false}
>
  <MockStyledComponent
    $isActive={false}
    $isCompleted={false}
  >
    <span />
  </MockStyledComponent>
  <MockStyledComponent
    $isActive={false}
    $isCompleted={false}
  >
    <MockStyledComponent
      $isActive={false}
      $isCompleted={false}
    />
    <MockStyledComponent />
  </MockStyledComponent>
</MockStyledComponent>
`;

exports[`NumberedStep applies title prop correctly 1`] = `
<MockStyledComponent
  $isActive={false}
  $isCompleted={false}
>
  <MockStyledComponent
    $isActive={false}
    $isCompleted={false}
  >
    <span />
  </MockStyledComponent>
  <MockStyledComponent
    $isActive={false}
    $isCompleted={false}
  />
  <MockStyledComponent
    $isActive={false}
    $isCompleted={false}
  >
    <MockStyledComponent
      $isActive={false}
      $isCompleted={false}
    >
      Test Title
    </MockStyledComponent>
    <MockStyledComponent />
  </MockStyledComponent>
</MockStyledComponent>
`;

exports[`NumberedStep renders children correctly if isActive is provided 1`] = `
<MockStyledComponent
  $isActive={true}
  $isCompleted={false}
>
  <MockStyledComponent
    $isActive={true}
    $isCompleted={false}
  >
    <span />
  </MockStyledComponent>
  <MockStyledComponent
    $isActive={true}
    $isCompleted={false}
  />
  <MockStyledComponent
    $isActive={true}
    $isCompleted={false}
  >
    <MockStyledComponent
      $isActive={true}
      $isCompleted={false}
    />
    <MockStyledComponent>
      Content
    </MockStyledComponent>
  </MockStyledComponent>
</MockStyledComponent>
`;
